<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intent.GioiThieu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Giới thiệu về Tiki" />

            <TextView
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/editText2"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/gioithieu" />

            <TextView
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/editText3"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/gioithieu2" />

            <TextView
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Video giới thiệu Tiki" />

            <FrameLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <VideoView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

            </FrameLayout>

            <TextView
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="Thông tin về công ty" />

            <TextView
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thongtin" />

            <TextView
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diachidky" />

            <TextView
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/giaychungnhan" />

            <TextView
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vanphongchinh" />

            <TextView
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vanphong" />

            <TextView
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bản đồ công ty" />

            <fragment
                android:id="@+id/myMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>